cmake_minimum_required(VERSION 3.24)
project(test)

set(CMAKE_CXX_STANDARD 14)
SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
#add_subdirectory(lib)
##include_directories(googletest/include googletest)
##link_directories(../bin)
##add_executable(src test.cpp pch.cpp CheckMethods.cpp)
##target_link_libraries(src gtest gtest_main core.dll)

add_subdirectory(lib)
include_directories(lib/googletest/include lib/googletest)
include_directories(lib/googlemock/include lib/googlemock)
include_directories(../src/core)
aux_source_directory(../src/core GTEST_DEMO_SRC)
add_executable(test test.cpp test.h CheckMethods.cpp CheckMethods.h ${GTEST_DEMO_SRC} ../src/run.cpp)
#add_executable(src test.cpp pch.cpp CheckMethods.cpp ../src/core/Core.cpp ../src/core/Edge.cpp ../src/core/Graph.cpp)
target_link_libraries(test gtest gtest_main)
#target_link_libraries(src gtest gtest_main)